--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container">
           <div class="hero__content">
             <h1 class="hero__title">CREATEX CONSTRUCTION</h1>
-            <div class="hero_decription">
+            <div class="hero__decription">
               Cras ultrices leo vitae non viverra. Fringilla nisi quisque
               consequat, dignissim vitae proin ipsum sed. Pellentesque nec
               turpis purus eget pellentesque integer ipsum elementum felis.
