--- a/index.html
+++ b/index.html
@@ -33,24 +33,24 @@
       </div>
 
       <div class="hero__slider slider">
+        <div class="slider__container">
+          <div class="slider__item">
+            <img src="img/bg-image.jpg" alt="">
+          </div>
+          <div class="slider__item">
+            <img src="img/bg-image.jpg" alt="">
+          </div>
+          <div class="slider__item">
+            <img src="img/bg-image.jpg" alt="">
+          </div>
+          <div class="slider__item">
+            <img src="img/bg-image.jpg" alt="">
+          </div>
+        </div>  
         <div class="slider__btns">
           <button class="slider__btn slider__btn-prev"></button>
           <button class="slider__btn slider__btn-next"></button>
-        </div>
-        <div class="slider__items">
-          <div class="slider__item slider__item-active">
-            <img src="./img/bg-image.jpg" alt="" />
-          </div>
-          <div class="slider__item">
-            <img src="./img/bg-image.jpg" alt="" />
-          </div>
-          <div class="slider__item">
-            <img src="./img/bg-image.jpg" alt="" />
-          </div>
-          <div class="slider__item">
-            <img src="./img/bg-image.jpg" alt="" />
-          </div>
-        </div>
+        </div>      
       </div>
     </div>
   </body>
